Make sure there is room around buttons on smaller screens in the host list. Getting a little cramped with features :)

--- a/compass/sass/_layout.scss
+++ b/compass/sass/_layout.scss
@@ -201,3 +201,7 @@ td.update,
 .wp-debug-log p {
 	margin-top: 20px;
 }
+
+.sites .btn {
+	margin-top: 5px;
+}
